add copy button

--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
         <div class="label_input_pair">
             <label>MetaID:</label>
             <input readonly type="text" id="meta_id_field">
+            <button id="meta_id_copy_button" class="icon_button copy">.</button>
         </div>
     
         <div class="label_input_pair">
             <label>MetaIDAttribute:</label>
             <input readonly type="text" id="meta_id_attribute_field">
+            <button id="meta_id_attribute_copy_button" class="icon_button copy">.</button>
         </div>
 
         <button id="generate_button">
